# Movie-Theatre-Manager

./: CMakeLists.txt  movieTheatreDB.c  movieTheatreDB.h  movieTheatreDB_actor.c  movieTheatreDB_actor.h  movieTheatreDB_movie.c  movieTheatreDB_movie.h  movie_actor_code.c  movie_actor_code.h
